infrastructure/core/system-upgrade-controller/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: system-upgrade-controller
  namespace: system-upgrade
spec:
  podSelector:
    matchLabels:
      upgrade.cattle.io/controller: system-upgrade-controller
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
  egress:
    - {}
